Overflow fixed

--- a/style.css
+++ b/style.css
@@ -19,16 +19,20 @@ body{
     background-size: auto;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow: hidden;
     
 }
-BODY::before {
+body::before {
     content: "";
     position: absolute;
+    width: 100vw;
+    height: 100vh;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
     background-color: rgba(0,0,0,0.15);
+    overflow: hidden;
 }
 
 .hide{
